--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-torch==2.0.1
-transformers==4.31.0
-scikit-learn==1.1.3
+numpy==1.22.4
 pandas==1.5.3
-numpy==1.24.2
+seaborn==0.12.2
 matplotlib==3.7.1
-seaborn==0.11.2
 notebook==6.5.4
+scikit-learn==1.2.2
+tensorflow==2.11.0
+tensorflow-hub==0.12.0
+tensorflow-text==2.11.0
 tqdm==4.64.0
+wordcloud==1.8.2.2
